詳細GETの実装
